--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <li>Zain</li>
                     <li>Fadli</li>
                     <li>Nasrul</li>
-                    <li>Lino</li>
+                    <li>Rino</li>
                 </ol>
             </div>
             <div class="tugas">
